fix: fix menu mobile bar alignment

--- a/style.css
+++ b/style.css
@@ -427,7 +427,8 @@
                 font-size: 1rem;
             }
             nav {
-                grid-template-columns: 1fr 1fr;
+                grid-template-columns: auto;
+                justify-self: start;
                 ul[popover] {
                     flex-direction: column;
                     gap: 1rem;
